clusters/home/apps/trean/00namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: trean
  labels:
    app: trean
