clusters/home/apps/trean/trean-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trean
  namespace: trean
  labels:
    app: trean
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trean
  template:
    metadata:
      labels:
        app: trean
    spec:
      securityContext:
        fsGroup: 65534
      containers:
        - name: trean
          image: ghcr.io/itsachance/3an:latest
          ports:
            - containerPort: 5500
              name: http
          securityContext:
            runAsUser: 65534
            runAsNonRoot: true
          volumeMounts:
            - name: trean-data
              mountPath: /data
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      volumes:
        - name: trean-data
          persistentVolumeClaim:
            claimName: trean-data
