clusters/home/apps/trean/trean-service.yml
apiVersion: v1
kind: Service
metadata:
  name: trean
  namespace: trean
  labels:
    app: trean
spec:
  selector:
    app: trean
  ports:
    - port: 80
      targetPort: 5500
      name: http
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: 3an-postgre-db
  namespace: trean
  labels:
    app: trean
spec:
  type: ExternalName
  externalName: trean-db-rw.trean.svc.cluster.local
  ports:
    - port: 5432
