clusters/home/apps/trean/trean-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trean
  namespace: trean
  labels:
    app: trean
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: http
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: authelia-authelia-forwardauth@kubernetescrd
spec:
  rules:
  - host: trean.bytechance.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: trean
            port:
              number: 80
  tls:
  - hosts:
    - trean.bytechance.dev
    secretName: trean-tls
